--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
             <!-- Grid container -->
 
             <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: #1A1E21;">
+            <div class="text-center p-3 grey-background">
                 <a class="text-white" asp-area="" asp-page="/Privacy"> &copy; 2023 Copyright: Gym Junkie Cuisine</a>
             </div> 
             <!-- Copyright -->
