--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -63,10 +63,13 @@
     </div>
     <!-- Main body -->
 
+    <!-- Button that takes the user to the top of the page using JavaScript -->
+    <div class="floating-button">
+        <button id="to_top_button" class="btn btn-primary" onclick="toTop()">Back to Top</button>
+    </div>
 
-        <!-- Footer -->
+    <!-- Footer -->
         <footer class="bg-dark text-center text-white round-corner-top">
-        
             <!-- Grid container -->
             <div class="container p-4 pb-0">
                 <!-- Section: Social media -->
