--- a/Web App/Pages/Menu.cshtml
+++ b/Web App/Pages/Menu.cshtml
@@ -53,7 +53,7 @@
                     else
                     {
                         <form>
-                            <button type="reset" class="btn btn-primary" onclick="location.href='../Identity/Account/Login'">
+                            <button type="reset" class="btn btn-primary" onclick="location.href='/Identity/Account/Login'">
                                 Login to Buy
                             </button>
                         </form>
