--- a/Web App/Pages/Contact.cshtml
+++ b/Web App/Pages/Contact.cshtml
@@ -13,9 +13,33 @@
 <body>
     <!-- Title of the contact page -->
     <h1>@ViewData["Title"]</h1>
-    <p>Contact information here...</p>
 
     <!-- Form for contacting the website owner via email -->
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="contact-form">
+                <form method="post">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Dodgy Archie" name="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email" placeholder="name@chester.ac.uk" name="emailaddress">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea class="form-control" id="message" rows="5" name="message"></textarea>
+                    </div>
+                    <p>
+                    <div>
+                        <input type="submit" class="btn btn-primary" value="Send email" />
+                    </div>
+                    </p>
+                </form>
+            </div>
+        </div>
+    </div>
 
 </body>
 
