--- a/Web App/Pages/Contact.cshtml
+++ b/Web App/Pages/Contact.cshtml
@@ -14,31 +14,42 @@
     <!-- Title of the contact page -->
     <h1>@ViewData["Title"]</h1>
 
+    <!-- Page's prompt -->
+    <!-- clickable email address code adapted from Buildable, 2024 -->
+    <p>Contact us with the form below or email to <a href="mailto:admin@chester.ac.uk">admin@chester.ac.uk</a></p>
+
     <!-- Form for contacting the website owner via email -->
     <div class="row">
-        <div class="col-sm-6">
-            <div class="contact-form">
-                <form method="post">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Dodgy Archie" name="name">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="name@chester.ac.uk" name="emailaddress">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea class="form-control" id="message" rows="5" name="message"></textarea>
-                    </div>
-                    <p>
-                    <div>
-                        <input type="submit" class="btn btn-primary" value="Send email" />
-                    </div>
-                    </p>
-                </form>
+        <form method="post" class="stretch-content">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Dodgy Archie" name="name" required>
             </div>
+            <div class="form-group">
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="name@chester.ac.uk" name="emailaddress" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" id="message" rows="5" name="message" required></textarea>
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="Send email" />
+            </div>
+        </form>
+
+        <!-- Message displayed to user upon sending the contact form -->
+        <div col-sm-11>
+            @if(Model.isSend == "success")
+            {
+                <p class="success-text">Your email has been sent. Thank you for contacting us, we will get back to you as soon as possible.</p>
+            }
+            @if (Model.isSend == "fail")
+            {
+                <p class="fail-text">Unfortunately, there has been an error. The email failed to send.</p>
+            }
         </div>
+
     </div>
 
 </body>
