--- a/Web App/Pages/Contact.cshtml
+++ b/Web App/Pages/Contact.cshtml
@@ -37,19 +37,7 @@
                 <input type="submit" class="btn btn-primary" value="Send email" />
             </div>
         </form>
-
-        <!-- Message displayed to user upon sending the contact form -->
-        <div col-sm-11>
-            @if(Model.isSend == "success")
-            {
-                <p class="success-text">Your email has been sent. Thank you for contacting us, we will get back to you as soon as possible.</p>
-            }
-            @if (Model.isSend == "fail")
-            {
-                <p class="fail-text">Unfortunately, there has been an error. The email failed to send.</p>
-            }
-        </div>
-
+        <!-- User is redirected to an appropriate page after submitting the form -->
     </div>
 
 </body>
