Attempting to use Stripe payments

--- a/Web App/Pages/Checkout.cshtml
+++ b/Web App/Pages/Checkout.cshtml
@@ -23,7 +23,7 @@
     }
     else
     {
-        <form method="post">
+        <form method="post" >
             <table class="table">
                 <thead>
                     <tr>
@@ -43,7 +43,7 @@
                             <td>@item.Price.ToString("C")</td>
                             <td>@item.Quantity</td>
                             <td>@subtotal.ToString("C")</td>
-                            <!-- Allow adjusting item totals with (+) & (-) buttons -->
+                            <!-- Allow adjusting item totals with (+) & (-) buttons *** -->
                         </tr>
                     }
                 </tbody>
