--- a/Web App/Pages/Contact.cshtml
+++ b/Web App/Pages/Contact.cshtml
@@ -16,7 +16,7 @@
 
     <!-- Page's prompt -->
     <!-- clickable email address code adapted from Buildable, 2024 -->
-    <p>Contact us with the form below or email to <a href="mailto:admin@chester.ac.uk">admin@chester.ac.uk</a></p>
+    <p>Contact us using the form below or email to <a href="mailto:admin@chester.ac.uk">admin@chester.ac.uk</a></p>
 
     <!-- Form for contacting the website owner via email -->
     <div class="row">
