--- a/Web App/Pages/Contact.cshtml
+++ b/Web App/Pages/Contact.cshtml
@@ -39,7 +39,7 @@
             </div>
         </form>
 
-        <!-- Embedder maps of the business' location -->
+        <!-- Embedded maps of the business' location -->
         <iframe class="mt-5 mb-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11371.178552558982!2d-2.8990328886766523!3d53.191023521615016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487add4902196da9%3A0xb48f3eff59de47ce!2s28b%20Upper%20Northgate%20St%2C%20Chester%20CH1%202HA!5e0!3m2!1sen!2suk!4v1710932063634!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
