--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
 
     <!-- Button that takes the user to the top of the page using JavaScript -->
     <div class="floating-button">
-        <button id="to_top_button" class="btn btn-primary" onclick="toTop()">Back to Top</button>
+        <button id="to_top_button" class="btn btn-gold" onclick="toTop()">Back to Top</button>
     </div>
 
     <!-- Footer -->
