--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -51,8 +51,8 @@
                             
                     @if (SignInManager.IsSignedIn(User))
                     {
-                    <li class="text-center">
-                        <a class="navbar-brand" asp-area="" asp-page="/Checkout">
+                            <li class="align-self-center">
+                        <a class="" asp-area="" asp-page="/Checkout">
                             <img src="@Url.Content("~/img/basket.png")" class="basket-icon" alt="basket logo for the checkout">
                         </a>
                     </li>
